--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,16 +29,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //Room implementations
-    def room_version = "2.4.2"
+    // add below dependency for using room.
 
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.4.3"
+
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+
+// add below dependency for using lifecycle extensions for room.
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+
 }
